# typed-num

./: Cargo.toml  README.md
src/: bincode.rs  lib.rs  serde.rs
